# surveys

./: .gitignore  README.md  flake.nix
.github/workflows/: netlify-deploy.yml
community/2025/: CHECKLIST.md  altplot.py  commentary.md  dfhelpers.py  process.py  survey.yaml
community/2025/_legacy/: README.md  altplot.py  export.py
dev-shells/: default.nix
legacy-packages/: default.nix
lib/site/: package-lock.json  package.json  tailwind.config.mjs
lib/site/src/: echarts-init.ts  env.d.ts
lib/site/src/components/: PlotRow.astro  SectionHeading.astro  TableOfContents.astro
lib/site/src/content/: config.ts
lib/site/src/layouts/: Layout.astro
lib/site/src/pages/: [year].astro  (+1 more)
nixcon-2025/: survey.md
overlays/: default.nix
overlays/python-packages/nixos-survey-lib/: package.nix  pyproject.toml
overlays/python-packages/nixos-survey-lib/nixos_survey_lib/: __init__.py  aggregate.py  loader.py  normalize.py  page.py  render_echarts.py  types.py
overlays/python-packages/nixos-survey-lib/tests/: test_aggregate.py  test_e2e.py  test_loader.py  test_normalize.py  test_page.py  test_render_echarts.py  test_smoke.py  test_types.py
overlays/python-packages/nixos-survey-lib/tests/fixtures/: expected_results.json  tiny_commentary.md  tiny_responses.csv  tiny_survey.yaml
overlays/top-level/nixos-surveys-community-2025-data/: package.nix  results-2025.json
overlays/top-level/nixos-surveys-community-2025-data-from-csv/: package.nix
overlays/top-level/nixos-surveys-community-2025-site/: package.nix
overlays/top-level/nixos-surveys-site/: package.nix
(+4 files in other folders)
